services/traefik/overlays/prod/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-traefik-forward-auth@kubernetescrd"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - traefik.k8s.cguertin.dev
    - auth.k8s.cguertin.dev
    secretName: traefik-dashboard-cert
  rules:
  - host: traefik.k8s.cguertin.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 80
  - host: auth.k8s.cguertin.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-forward-auth
            port:
              number: 4181
